final changes for the website

--- a/Files/html/about_us.html
+++ b/Files/html/about_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Z-ACTUELL - Contact Page</title>
-    <link rel="stylesheet" href="about_us.css" />
+    <link rel="stylesheet" href="../css/about_us.css" />
   </head>
   <body class="font-sans text-black">
     <nav class="navbar">
@@ -12,19 +12,19 @@
         <div class="dropdown">
           <button class="dropdown-btn">☰</button>
           <ul class="dropdown-content">
-            <li><a href="./index2.html">Home</a></li>
-            <li><a href="./innovation.html">Innovation</a></li>
-            <li><a href="./about_us.html">About Us</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="innovation.html">Innovation</a></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-        <img src="./img/logo.png" class="logo" alt="Z-ACTUELL Logo" />
+        <img src="../../img/logo.png" class="logo" alt="Z-ACTUELL Logo" />
       </div>
       <ul class="nav-links">
-        <li><a href="./index2.html">Home</a></li>
-        <li><a href="./innovation.html">Innovation</a></li>
-        <li><a href="./about_us.html">About Us</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="innovation.html">Innovation</a></li>
+        <li><a href="about_us.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <hr />
@@ -39,7 +39,7 @@
     <div class="team">
       <div class="team-member">
         <div class="profile-pic">
-          <img src="./img/about_us/members/Akshaya.png" alt="Akshaya S" />
+          <img src="../../img/about_us/members/Akshaya.png" alt="Akshaya S" />
         </div>
         <div class="team-member-info">
           <h3>Akshaya S</h3>
@@ -51,7 +51,7 @@
 
       <div class="team-member">
         <div class="profile-pic">
-          <img src="./img/about_us/members/Savitha.png" alt="Savitha Prabhu" />
+          <img src="../../img/about_us/members/Savitha.png" alt="Savitha Prabhu" />
         </div>
         <div class="team-member-info">
           <h3>Savitha Prabhu</h3>
@@ -62,7 +62,7 @@
 
       <div class="team-member">
         <div class="profile-pic">
-          <img src="./img/about_us/members/Rajesh.png" alt="Rajesh S" />
+          <img src="../../img/about_us/members/Rajesh.png" alt="Rajesh S" />
         </div>
         <div class="team-member-info">
           <h3>Rajesh S</h3>
@@ -73,7 +73,7 @@
 
       <div class="team-member">
         <div class="profile-pic">
-          <img src="./img/about_us/members/Meenakshi.png" alt="Meenakshi" />
+          <img src="../../img/about_us/members/Meenakshi.png" alt="Meenakshi" />
         </div>
         <div class="team-member-info">
           <h3>Meenakshi</h3>
