--- a/Files/html/contact.html
+++ b/Files/html/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Z-ACTUELL - India's Gaming Revolution</title>
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="../css/contact.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -12,19 +12,19 @@
         <div class="dropdown">
           <button class="dropdown-btn">☰</button>
           <ul class="dropdown-content">
-            <li><a href="./index2.html">Home</a></li>
-            <li><a href="./innovation.html">Innovation</a></li>
-            <li><a href="./about_us.html">About Us</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="innovation.html">Innovation</a></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-        <img src="./img/logo.png" class="logo" alt="Z-ACTUELL Logo" />
+        <img src="../../img/logo.png" class="logo" alt="Z-ACTUELL Logo" />
       </div>
       <ul class="nav-links">
-        <li><a href="./index2.html">Home</a></li>
-        <li><a href="./innovation.html">Innovation</a></li>
-        <li><a href="./about_us.html">About Us</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="innovation.html">Innovation</a></li>
+        <li><a href="about_us.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <hr />
