--- a/Files/html/innovation.html
+++ b/Files/html/innovation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Z-ACTUELL - India's Gaming Revolution</title>
-    <link rel="stylesheet" href="innovation.css" />
+    <link rel="stylesheet" href="../css/innovation.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -12,19 +12,19 @@
         <div class="dropdown">
           <button class="dropdown-btn">☰</button>
           <ul class="dropdown-content">
-            <li><a href="./index2.html">Home</a></li>
-            <li><a href="./innovation.html">Innovation</a></li>
-            <li><a href="./about_us.html">About Us</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="innovation.html">Innovation</a></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-        <img src="./img/logo.png" class="logo" alt="Z-ACTUELL Logo" />
+        <img src="../../img/logo.png" class="logo" alt="Z-ACTUELL Logo" />
       </div>
       <ul class="nav-links">
-        <li><a href="./index2.html">Home</a></li>
-        <li><a href="./innovation.html">Innovation</a></li>
-        <li><a href="./about_us.html">About Us</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="innovation.html">Innovation</a></li>
+        <li><a href="about_us.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <hr />
@@ -34,27 +34,27 @@
     <div class="cards">
       <!-- Card 1 -->
       <div class="card">
-        <img src="img/innovation/icons/physical_game.png" alt="Physical Games Icon" class="card-icon">
+        <img src="../../img/innovation/icons/physical_game.png" alt="Physical Games Icon" class="card-icon">
         <h3 class="card-title">Physical Games</h3>
         <p class="card-text">Creating board games & securing Intellectual Property Rights (IPR).</p>
       </div>
       <!-- Card 2 -->
       <div class="card">
-        <img src="img/innovation/icons/video_game.png" alt="Outdoor Games Icon" class="card-icon">
+        <img src="../../img/innovation/icons/video_game.png" alt="Outdoor Games Icon" class="card-icon">
         <h3 class="card-title">Video Games</h3>
         <p class="card-text">Converting board games into digital games for Gen-Z.</p>
         
       </div>
       <!-- Card 3 -->
       <div class="card">
-        <img src="img/innovation/icons/story_telling.png" alt="Camping for Kids Icon" class="card-icon">
+        <img src="../../img/innovation/icons/story_telling.png" alt="Camping for Kids Icon" class="card-icon">
         <h3 class="card-title">Iconic Characters</h3>
         <p class="card-text">Developing captivating game characters for storytelling.</p>
         
       </div>
       <!-- Card 4 -->
       <div class="card">
-        <img src="img/innovation/icons/cartoon.png" alt="Camping for Kids Icon" class="card-icon">
+        <img src="../../img/innovation/icons/cartoon.png" alt="Camping for Kids Icon" class="card-icon">
         <h3 class="card-title">Cartoons, OTT & Movies</h3>
         <p class="card-text">Evolving characters into full-fledged media franchises.</p>
       </div>
@@ -63,28 +63,28 @@
       <h1>Business Model</h1>
       <div class="model-grid">
         <div class="grid-item yellow">
-          <img src="img/innovation/BMC/Protected.png" alt="IPR Protected Games" />
+          <img src="../../img/innovation/BMC/Protected.png" alt="IPR Protected Games" />
           <div class="text-content">
             <h2>IPR Protected Games</h2>
             <p>Secure foundation for innovators.</p>
           </div>
         </div>
         <div class="grid-item pink">
-          <img src="img/innovation/BMC/Selection.png" alt="Curated Selection" />
+          <img src="../../img/innovation/BMC/Selection.png" alt="Curated Selection" />
           <div class="text-content">
             <h2>Curated Selection</h2>
             <p>Only the best games make it to our platform.</p>
           </div>
         </div>
         <div class="grid-item purple">
-          <img src="img/innovation/BMC/Partnership.png" alt="Licensing & Branding" />
+          <img src="../../img/innovation/BMC/Partnership.png" alt="Licensing & Branding" />
           <div class="text-content">
             <h2>Licensing & Branding</h2>
             <p>Scaling through partnerships.</p>
           </div>
         </div>
         <div class="grid-item green">
-          <img src="img/innovation/BMC/Revenue.png" alt="Profitable for Innovators" />
+          <img src="../../img/innovation/BMC/Revenue.png" alt="Profitable for Innovators" />
           <div class="text-content">
             <h2>Profitable for Innovators</h2>
             <p>Revenue-sharing model.</p>
