--- a/Files/html/contact.html
+++ b/Files/html/contact.html
@@ -59,6 +59,7 @@
           <a href="#" class="social-link">Twitter: </a>
           <span>|</span>
           <a href="#" class="social-link">Instagram: </a>
+          <a href="#" class="social-link">Facebook: </a>
         </div>
       </div>
     </div>
