--- a/Files/html/about_us.html
+++ b/Files/html/about_us.html
@@ -29,7 +29,7 @@
     </nav>
     <hr />
     <section class="section card">
-      <h2 class="title">OUR VISION</h2>
+      <h2 class="title">About Us</h2>
       <p class="text">
         India's first Make in India gaming marketplace, turning innovative
         Indian games into global brands.
@@ -93,6 +93,6 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer">&copy; 2025 Z-ACTUELL. All rights reserved.</div>
+    <div class="footer" style="left: 0; bottom:0; position:fixed; width:100vw">&copy; 2025 Z-ACTUELL. All rights reserved.</div>
   </body>
 </html>
