--- a/Files/html/innovation.html
+++ b/Files/html/innovation.html
@@ -92,7 +92,7 @@
         </div>
       </div>
     </div>
-    <div class="market-size">
+    <!-- <div class="market-size">
       <h1>Market Size</h1>
       <div class="circle tam">
         <p class="label">TAM</p>
@@ -115,7 +115,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="footer">&copy; 2025 Z-ACTUELL. All rights reserved.</div>
   </body>
 </html>
