--- a/Files/html/contact.html
+++ b/Files/html/contact.html
@@ -64,6 +64,6 @@
       </div>
     </div>
 
-    <div class="footer">&copy; 2025 Z-ACTUELL. All rights reserved.</div>
+    <div class="footer" style="left: 0; bottom:0; position:fixed; width:100vw">&copy; 2025 Z-ACTUELL. All rights reserved.</div>
   </body>
 </html>
